update View Website instead of Source

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                             <h2>Restaurant App</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/reservation.png" class="img-responsive img-centered" alt="">
-                            <p>An single page application that manages restaurant reservation <a href="https://reservation-app1.herokuapp.com/">View Source</a></p>
+                            <p>An single page application that manages restaurant reservation <a href="https://reservation-app1.herokuapp.com/">View Website</a></p>
                             <ul class="list-inline item-details">
                                 <li>
                                     <img src="img/git.png" class="logo">
@@ -362,7 +362,7 @@
                             <hr class="star-primary">
                             <img src="img/portfolio/map.png" class="img-responsive img-centered" alt="">
                             <p>A single page application that use Google API and instagram API <a href="https://instatravel.herokuapp.com/">
-                              View Source</a></p>
+                              View Website</a></p>
                             <ul class="list-inline item-details">
                               <li>
                                   <img src="img/git.png" class="logo">
