added new app and updated About Me

--- a/index.html
+++ b/index.html
@@ -47,6 +47,24 @@
                 <a class="navbar-brand" href="#page-top">Mandy Chan</a>
             </div>
 
+            <ul class="nav navbar-nav">
+              <li>
+                <a target="_blank" href="https://github.com/mmloveaa">
+                  <img class='navbar-image' src="img/socialMedia/Github.png" alt="">
+                </a>
+              </li>
+              <li>
+                <a target="_blank" href="https://www.linkedin.com/in/mandychan2">
+                  <img class='navbar-image' src="img/socialMedia/LinkedIn.png" alt="">
+                </a>
+              </li>
+              <li>
+                <a target="_blank" href="https://twitter.com/MandyChanNYC">
+                  <img class='navbar-image' src="img/socialMedia/Twitter.png" alt="">
+                </a>
+              </li>
+            </ul>
+
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -60,7 +78,7 @@
                         <a href="#resume">Resume</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#about">About Me</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
@@ -81,7 +99,7 @@
                     <div class="intro-text">
                         <span class="name">FullStack Developer</span>
                         <hr class="star-light">
-                        <span class="skills">Fullstack Developer - Innovative Thinker - Photographer - Hiker</span>
+                        <span class="skills">Innovative Thinker - Photographer - Hiker</span>
                     </div>
                 </div>
             </div>
@@ -125,7 +143,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/todo.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -162,6 +180,26 @@
         </div>
     </section>
 
+    <!-- Technologies -->
+    <!-- <section id='technologies'>
+      <div class="title">
+        Technologies
+      </div>
+      <div class="horizontal-line"></div>
+      <div>
+        <img src="./images/techs/es6.png" alt="" class="technology-logos">
+        <img src="./images/techs/express.png" alt="" class="technology-logos">
+        <img src="./images/techs/html-css.png" alt="" class="technology-logos">
+        <img src="./images/techs/git-logo.jpg" alt="" class="technology-logos">
+        <img src="./images/techs/nodejs-logo.png" alt="" class="technology-logos">
+        <img src="./images/techs/angular.png" alt="" class="technology-logos">
+        <img src="./images/techs/mongodb.png" alt="" class="technology-logos">
+        <img src="./images/techs/react.jpg" alt="" class="technology-logos">
+        <img src="./images/techs/jquery.png" alt="" class="technology-logos">
+        <img src="./images/techs/firebase.jpg" alt="" class="technology-logos">
+      </div>
+    </section> -->
+
     <!-- About Section -->
     <section class="success" id="about">
         <div class="container">
@@ -172,30 +210,27 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>I learn JavaScript on my own using different online resources. My goal is to become a Fullstack JavaScript Developer.
-
+                <div class="col-lg-12 col-lg-offset-2">
+                    <p>Passionate and curious learner with extensive background in retail and business</p>
+                    <p>Determined to make a career change as a Full Stack Developer. </p>
+                    <p>Through self study and attended a fully immersive live-in bootcamp in the Silicon Valley,</p>
+                    <p>Currently looking for an opportunity to further develope my skill as a software developer</p>
                     <br />
                     <br />
-                    When I am not coding, you can find me hiking on mountains and taking photographs of birds, bears or big horn sheep. </p>
+                    <p>When I am not coding, you can find me hiking on mountains and taking photographs of birds or bears. </p>
                 </div>
-                <div class="col-lg-4">
+                <!-- <div class="col-lg-4">
                     <p> Interesting Facts about Me.</p>
                     <ul>
                         <li style="font-size:17px"> I speak 4 languages. Cantonese is my native language as I was born in Hong Kong. Currently, I'm learning JavaScript.</li>
                         <br />
                         <li style="font-size:17px"> I visited many National Parks in America. The longest hike I did in one day was the Highline 20+ miles round-trip trails at Glacier National Park in Montana.</li>
                         <br />
-                        <li style="font-size:17px"> I can wait for a nice photograph of a bird for an entire morning. Still waiting to take pictures of the beautiful bunting bird.</li>
+                        <li style="font-size:17px"> I can wait for a nice photograph of a bird for an entire morning. Still waiting to take a picture of the beautiful bunting bird.</li>
                         <br />
                     </ul>
-
-                </div>
-               <!--  <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
                 </div> -->
+
             </div>
         </div>
     </section>
@@ -262,22 +297,23 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>Find Me at any Tech events in <br>New York City</p>
+                        <p>New York City</p>
+                        <p>San Francisco Bay Area</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>Technologies</h3>
                         <ul class="list-inline">
                             <!-- <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li> -->
-                            <li>
+                            <!-- <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                            </li> -->
+                            <li>
+                                <a href="https://twitter.com/MandyChanNYC" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                                <a href="https://www.linkedin.com/in/mandychan2" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <!-- <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
@@ -286,7 +322,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Follow Me</h3>
-                        <p><a href="twitter.com/MandyChanNYC">Twitter</a></p>
+                        <p><a href="https://twitter.com/MandyChanNYC">Twitter</a></p>
                     </div>
                 </div>
             </div>
@@ -295,7 +331,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2014
+                        Copyright &copy; Website 2016
                     </div>
                 </div>
             </div>
@@ -361,7 +397,7 @@
                             <h2>InstaTravel</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/map.png" class="img-responsive img-centered" alt="">
-                            <p>A single page application that use Google API and instagram API <a href="https://instatravel.herokuapp.com/">
+                            <p>Using Google API and instagram API to build a trip planner<a href="https://instatravel.herokuapp.com/">
                               View Website</a></p>
                             <ul class="list-inline item-details">
                               <li>
@@ -395,23 +431,24 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>TwoDope Travelers</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a></p>
+                            <img src="img/portfolio/todo.png" class="img-responsive img-centered" alt="">
+                            <p>Using Google API and instagram API to build a trip planner<a href="https://mandytravel.herokuapp.com/">
+                              View Website</a></p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Client 3</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
+                              <li>
+                                  <img src="img/git.png" class="logo">
+                                  <strong><a href="https://github.com/mmloveaa/travel_app">View Source</a>
+                                  </strong>
+                              </li>
+                              <li><h4>Technologies:</h4>
+                                  <img src="img/mongodb.png" class="logo">
+                                  <img src="img/express.png" id="express">
+                                  <img src="img/angular.png" class="logo">
+                                  <img src="img/node.png" id="node">
+                                  <img src="img/sql.png" class="logo">
+                              </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
@@ -435,20 +472,9 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a></p>
+                            // Add Description of the project
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Client 4</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
+
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
@@ -472,20 +498,9 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a></p>
+                            // Add Description of the project
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Client 5</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
+
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
@@ -509,20 +524,9 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a></p>
+                            // Add Description of the project
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Client 6</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
+
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
