Updated description of the new app Added technologies

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                 <div class="col-lg-12 col-lg-offset-2">
                     <p>Passionate and curious learner with extensive background in retail and business</p>
                     <p>Determined to make a career change as a Full Stack Developer. </p>
-                    <p>Through self study and attended a fully immersive live-in bootcamp in the Silicon Valley,</p>
-                    <p>Currently looking for an opportunity to further develope my skill as a software developer</p>
+                    <p>Through self study and attended a fully immersive live-in bootcamp in the Silicon Valley</p>
+                    <p>Currently, looking for an opportunity to further develope my skill as a software developer</p>
                     <br />
                     <br />
                     <p>When I am not coding, you can find me hiking on mountains and taking photographs of birds or bears. </p>
@@ -295,35 +295,38 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
+                    <!-- <div class="footer-col col-md-4">
                         <h3>Location</h3>
                         <p>New York City</p>
                         <p>San Francisco Bay Area</p>
-                    </div>
-                    <div class="footer-col col-md-4">
+                    </div> -->
+                    <div class="footer-col col-md-12">
                         <h3>Technologies</h3>
                         <ul class="list-inline">
+                          <img src="./img/techs/es6.png" alt="" class="technology-logos">
+                          <img src="./img/techs/express.png" alt="" class="technology-logos">
+                          <img src="./img/techs/html-css.png" alt="" class="technology-logos">
+                          <img src="./img/techs/git-logo.jpg" alt="" class="technology-logos">
+                          <img src="./img/techs/nodejs-logo.png" alt="" class="technology-logos">
+                          <img src="./img/techs/angular.png" alt="" class="technology-logos">
+                          <img src="./img/techs/mongodb.png" alt="" class="technology-logos">
+                          <img src="./img/techs/ionic.png" alt="" class="technology-logos">
+                          <img src="./img/techs/jquery.png" alt="" class="technology-logos">
+                          <img src="./img/techs/firebase.jpg" alt="" class="technology-logos">
+
                             <!-- <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li> -->
-                            <!-- <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li> -->
-                            <li>
                                 <a href="https://twitter.com/MandyChanNYC" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/mandychan2" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <!-- <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
                             </li> -->
+
                         </ul>
                     </div>
-                    <div class="footer-col col-md-4">
-                        <h3>Follow Me</h3>
-                        <p><a href="https://twitter.com/MandyChanNYC">Twitter</a></p>
-                    </div>
+                    <!-- <div class="footer-col col-md-12">
+                        <h3>Contact Me</h3>
+                        <p>Email : mandychan1128@gmail.com</p>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -434,7 +437,7 @@
                             <h2>TwoDope Travelers</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/todo.png" class="img-responsive img-centered" alt="">
-                            <p>Using Google API and instagram API to build a trip planner<a href="https://mandytravel.herokuapp.com/">
+                            <p>Full CRUD Application let you manage your travel to-do list<a href="https://mandytravel.herokuapp.com/">
                               View Website</a></p>
                             <ul class="list-inline item-details">
                               <li>
