Changed Contact Me Form

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                     <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
                     </li>
-                    <li class="page-scroll">
+                    <!-- <li class="page-scroll">
                         <a href="#resume">Resume</a>
-                    </li>
+                    </li> -->
                     <li class="page-scroll">
                         <a href="#about">About Me</a>
                     </li>
@@ -234,6 +234,22 @@
             </div>
         </div>
     </section>
+
+    <!-- Resume -->
+    <!-- <section id="contact">
+      <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+             </div>
+             <div class="modal-body">
+              <iframe id="resume" src="./img/Mandy_Resume_CA.pdf" width="100%" height="500"></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
 
     <!-- Contact Section -->
     <section id="contact">
