Fixed Resume Modal

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                     <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
                     </li>
-                    <!-- <li class="page-scroll">
-                        <a href="#resume">Resume</a>
-                    </li> -->
+                    <li data-toggle="collapse" data-target=".navbar-collapse.in">
+          						<a data-toggle="modal" data-target=".bs-example-modal-lg">Resume</a>
+          					</li>
                     <li class="page-scroll">
                         <a href="#about">About Me</a>
                     </li>
@@ -89,6 +89,22 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+
+
+<!--Modal-->
+
+    <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					</div>
+					<div class="modal-body">
+						<iframe id="resume" src="Mandy_Resume_CA.pdf#page=1&zoom=100" width="100%" height="900"></iframe>
+					</div>
+				</div>
+			</div>
+		</div>
 
     <!-- Header -->
     <header>
@@ -312,10 +328,33 @@
             <div class="container">
                 <div class="row">
                     <!-- <div class="footer-col col-md-4">
+
                         <h3>Location</h3>
                         <p>New York City</p>
                         <p>San Francisco Bay Area</p>
                     </div> -->
+
+                    <div class="centerbuttons">
+                        <button id="modal-show">Send me a message!</button>
+                        <div id="modal-container">
+                          <section id="modal-box">
+                            <button id="modal-hide">x</button>
+                            <h2 id="email-header">Email me!</h2>
+                            <form action="https://getsimpleform.com/messages?form_api_token=0ccd1c7c0a7d738be3ba60044ecfd27a" id="email-signup" method="post">
+                              <input type="name" name="name" value="" placeholder="Your name" required>
+                              <br>
+                              <br>
+                              <input type="email" name="email" value="" placeholder="Your email" required>
+                              <br>
+                              <br>
+                              <textarea class="message" type="text" name="message" value="" placeholder="Your message"></textarea>
+                              <br>
+                              <br>
+                              <input id="sendButton" type="submit" value="Send!">
+                            </form>
+                          </section>
+                        </div>
+                  </div>
                     <div class="footer-col col-md-12">
                         <h3>Technologies</h3>
                         <ul class="list-inline">
