--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 					</div>
 					<div class="modal-body">
-						<iframe id="resume" src="Mandy_Resume_CA.pdf#page=1&zoom=100" width="100%" height="900"></iframe>
+						<iframe id="resume" src="Mandy-Resume_NY.pdf#page=1&zoom=100" width="100%" height="900"></iframe>
 					</div>
 				</div>
 			</div>
@@ -334,6 +334,8 @@
                         <p>San Francisco Bay Area</p>
                     </div> -->
 
+
+                    <!-- Email -->
                     <div class="centerbuttons">
                         <button id="modal-show">Send me a message!</button>
                         <div id="modal-container">
@@ -354,7 +356,8 @@
                             </form>
                           </section>
                         </div>
-                  </div>
+                    </div>
+
                     <div class="footer-col col-md-12">
                         <h3>Technologies</h3>
                         <ul class="list-inline">
