--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
     </section> -->
 
     <!-- Contact Section -->
+    <!-- Contact Section -->
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -321,7 +322,7 @@
             </div>
         </div>
     </section>
-
+    
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
@@ -336,7 +337,7 @@
 
 
                     <!-- Email -->
-                    <div class="centerbuttons">
+                    <!-- <div class="centerbuttons">
                         <button id="modal-show">Send me a message!</button>
                         <div id="modal-container">
                           <section id="modal-box">
@@ -356,7 +357,7 @@
                             </form>
                           </section>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="footer-col col-md-12">
                         <h3>Technologies</h3>
@@ -371,14 +372,6 @@
                           <img src="./img/techs/ionic.png" alt="" class="technology-logos">
                           <img src="./img/techs/jquery.png" alt="" class="technology-logos">
                           <img src="./img/techs/firebase.jpg" alt="" class="technology-logos">
-
-                            <!-- <li>
-                                <a href="https://twitter.com/MandyChanNYC" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.linkedin.com/in/mandychan2" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li> -->
-
                         </ul>
                     </div>
                     <!-- <div class="footer-col col-md-12">
