--- a/index.html
+++ b/index.html
@@ -275,8 +275,11 @@
                 <div class="col-lg-12 text-center">
                     <h2>Contact Me</h2>
                     <hr class="star-primary">
+                    <p> Email : mandychan1128@gmail.com</p>
+                    <p> Phone : 347-721-1827</p>
                 </div>
             </div>
+            <br />
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
@@ -314,7 +317,9 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
+                              <center>
                                 <button type="submit" class="btn btn-success btn-lg">Send</button>
+                              </center>
                             </div>
                         </div>
                     </form>
@@ -322,7 +327,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
