updated email contact

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <div class="col-lg-12 text-center">
                     <h2>Contact Me</h2>
                     <hr class="star-primary">
-                    <p> Email : mandychan1128@gmail.com</p>
+                    <p> Email : hello@mandyc.net</p>
                     <p> Phone : 347-721-1827</p>
                 </div>
             </div>
